Fix word wrapping issue

--- a/low-code-editor/src/Diagram/components/Portals/ConfigForm/Elements/ExpressionEditor/style.scss
+++ b/low-code-editor/src/Diagram/components/Portals/ConfigForm/Elements/ExpressionEditor/style.scss
@@ -58,8 +58,8 @@
             }
         }
 
-        .exp-editor-expanded {
-            height: 55px;
+        .exp-editor-access-token {
+            height: 65px;
             width: 100%;
             border: 1px solid #5567d5;
             border-radius: 5px;
